# nautilus-makepkg

./: Makefile.am  autogen.sh  configure.ac
src/: Makefile.am  makepkg.in  nautilus-extension.c  nautilus-makepkg.c  nautilus-makepkg.h  nautilus-makepkg.schemas.in
