ACLOCAL_AMFLAGS = -I m4

SUBDIRS = src po

DISTCHECK_CONFIGURE_FLAGS = --disable-schemas-install

DISTCLEANFILES = intltool-extract intltool-merge intltool-update po/.intltool-merge-cache
MAINTAINERCLEANFILES = Makefile.in aclocal.m4 compile config.guess config.h.in config.sub configure depcomp install-sh intltool-extract.in intltool-merge.in intltool-update.in ltmain.sh missing mkinstalldirs -rf m4
